(library (name bin_prot)
 (libraries bin_shape base.md5 base ppx_stable_witness.stable_witness)
 (public_name bin_prot)
 (foreign_stubs (language c) (names blit_stubs))
 (preprocess (pps ppx_sexp_conv ppx_compare ppx_optcomp))
 (js_of_ocaml (javascript_files runtime.js))
 (wasm_of_ocaml (javascript_files runtime.js) (wasm_files runtime.wat)))
