(rule (targets cflags.sexp) (deps (:first_dep cflags.sh))
 (action (bash "./%{first_dep} > %{targets}")))

(library (name bin_prot_xen) (public_name bin_prot.xen) (optional)
 (virtual_deps mirage-xen-ocaml) (libraries bigarray mirage-xen-ocaml)
 (foreign_stubs (language c) (flags (:include cflags.sexp)))
 (preprocess no_preprocessing))
